force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__ECMImageErrorFlg__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ECMImageErrorFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fleekdrive画像エラー出力</label>
    <type>Checkbox</type>
</CustomField>