force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__IsActive__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>