force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__LastModifiedByUser__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__LastModifiedByUser__c</fullName>
    <description>ユーザが最後に更新した日時を保存します。</description>
    <label>最終更新日時</label>
    <type>DateTime</type>
</CustomField>