force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__ListViewDeteil__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ListViewDeteil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>リストビューの明細出力</label>
    <type>Checkbox</type>
</CustomField>