force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__UpdateField__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__UpdateField__c</fullName>
    <description>保存時項目更新</description>
    <label>保存時項目更新</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>