force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/fields/SOLXYZCSO001__UpdateFieldCallFlow__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__UpdateFieldCallFlow__c</fullName>
    <description>保存時項目更新:フロー呼び出し</description>
    <label>保存時項目更新:フロー呼び出し</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>