force-app/main/default/objects/SOLXYZCSO001__ReportDefinition__c/listViews/GM_ReportDefinition.listView-meta.xml
<ListView>
    <fullName>GM_ReportDefinition</fullName>
    <filterScope>Queue</filterScope>
    <label>GM</label>
    <queue>GM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>